--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <input type="email" name="email" placeholder="   your email" required><br>
                 Comment:
                 <textarea name="message" id="message" cols="30" rows="10" required></textarea><br>
-                <input type="hidden" name="_next" value="https://hdhd/thanks.html">
+                <input type="hidden" name="_next" value="https://arnoldharun.github.io/THREE/thanks.html">
                 <input type="hidden" name="_captcha" value="false">
                 <button type="submit">Submit</button>
              </form> 
