--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <input type="email" name="email" placeholder="   your email" required><br>
                 Comment:
                 <textarea name="message" id="message" cols="30" rows="10" required></textarea><br>
-                <input type="hidden" name="_next" value="https://arnoldharun.github.io/THREE/thanks.html">
+                <input type="hidden" name="_next" value="https://arnoldharun.github.io/THREE/thanks.html" target="blank">
                  <input type="hidden" name="_autoresponse" value="HEY! THIS IS HARUN.  THANK YOU FOR VISITING MY WEBSITE. ">
                
                 <button type="submit">Submit</button>
