--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           </div>
             <div><center>
               <h3><b>For More</b></h3>
-               Click here to <a href="Contact.html">Contact Me</a><br>
-               Click here for my <a href="info.html">Hobbies and Interests</a><br>
+               Click here to <a href="Contact.html" target="_blank">Contact Me</a><br>
+               Click here for my <a href="info.html" target="_blank">Hobbies and Interests</a><br>
                <hr width= "30%">
                <b>Quote</b><br>
                <em>Parmi Les Rares</em><br>
