--- a/Myphoto.html
+++ b/Myphoto.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>thanks</title>
+    <link rel="stylesheet" href="photo.css">
+    <title>My Photo</title>
 </head>
 <body>
-    <center><img src="images/thank.jpg" alt="ju" width="400" height="400"></center>
-    <hr width="30%">
-    <Center><h1><b><strong>THANK YOU FOR VISITING MY WEBSITE <br>YOUR EMAIL WAS SUCCESSFULY SENT!</strong></b></h1></Center>
-    <hr width="30%">
+    <h1>My Photo</h1>
+    <img src="images/harun.jpg" alt="">
 </body>
-<footer> <center>&COPY;Copyrights:HarunK</center></footer>
 </html>
