--- a/AssignmentOne.html
+++ b/AssignmentOne.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harun's Personal Website</title>
+    <title>Harun's Personal Website Assignment One</title>
 
 </head>
 <body >
@@ -54,8 +54,8 @@
          
             <div><center>
               <h3><b>For More</b></h3>
-               Click here to <a href="Contact.html" target="blank">Contact Me</a><br>
-               Click here for my <a href="info.html" target="blank">Hobbies and Interests</a><br>
+               Click here to <a href="Contact.html">Contact Me</a><br>
+               Click here for my <a href="info.html">Hobbies and Interests</a><br>
                <b><h4>Please click and checkout for more</h4></b>
                <hr width= "30%">
                <b>Quote</b><br>
